[package]
name = "sse-oled-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.193" , features = ["derive"]}
serde_json = "1.0.108"
serde_with = { version = "1.6.1", features = ["json"] }
derivative = "2.2.0"
serde_repr = "0.1.17"
log = "0.4.20"
chrono = "0.4.31"
env_logger= "0.10.1"